@@ -115,11 +115,8 @@
       }
 
       &.commits-stat {
-        margin-top: 3px;
         display: block;
-        padding: 3px;
-        padding-left: 0;
-
+        padding: 0 3px 0 0;
         &:hover {
           background: none;
         }
