@@ -1,6 +1,7 @@
 Please view this file on the master branch, on stable branches it's out of date.
 
 v 8.12.0 (unreleased)
+  - Make push events have equal vertical spacing.
   - Add two-factor recovery endpoint to internal API !5510
   - Add font color contrast to external label in admin area (ClemMakesApps)
   - Change merge_error column from string to text type
